added steps to clean words in comments in word analysis notebook

--- a/src/word_analysis.ipynb
+++ b/src/word_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "id": "9a98138c-b4f3-427a-aa94-176e60656d78",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import re\n",
+    "import string"
    ]
   },
   {
@@ -125,46 +127,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "88c5e7f4-3192-456e-b5f4-035cd67f1e42",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "user\n",
-       "@asingha94                        188\n",
-       "@Vic67s                            38\n",
-       "@rexk                              36\n",
-       "@RyzenRTX89                        19\n",
-       "@user-us6ji2sl3c                   13\n",
-       "                                 ... \n",
-       "@GodHimself-bp3xw                   1\n",
-       "@adahepper2665                      1\n",
-       "@barristeraiman                     1\n",
-       "@FROMTHERIVERTOTHESEA-remember      1\n",
-       "@theheelturn7242                    1\n",
-       "Name: count, Length: 263, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 20,
+   "id": "022f3c37-8aca-4aa6-ad84-0c13101b1cea",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "all_comments_df['user'].value_counts()"
+    "singh_comments = all_comments_df[all_comments_df['user'] == '@asingha94']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "022f3c37-8aca-4aa6-ad84-0c13101b1cea",
-   "metadata": {},
+   "execution_count": 76,
+   "id": "26ca822b-bb0e-4e45-86c0-80c9fe240afe",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "words  = []\n",
+    "\n",
+    "# apply a lambda (temproray) function to split each comment into a list of words where the split is done on spaces and punctuation marks, then use a for loop to append all the words into a list of comments, one comment at a time\n",
+    "#for comment in singh_comments['comment'].apply(lambda x: re.split(r'\\W+', x)):\n",
+    "#    words += comment\n",
+    "\n",
+    "# apply a lambda (temproray) function to split each comment into a list of words, then use a for loop to append all the words into a list of comments, one comment at a time\n",
+    "for comment in singh_comments['comment'].apply(lambda x: x.split()):\n",
+    "    words += comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "f318ff4e-9590-4953-a664-505b572704f3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# create a mapping table that won't replace any characters but will remove punctuation characters\n",
+    "translate_table = str.maketrans('', '', string.punctuation)\n",
+    "\n",
+    "# apply the mapping table to the list of words to strip all the punctuation\n",
+    "cleaned_words = [word.translate(translate_table) for word in words]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "0bd6c02e-68bc-411c-8a07-77afb92d9ec0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# make everything lower case\n",
+    "cleaned_words = [word.lower() for word in cleaned_words]"
+   ]
   }
  ],
  "metadata": {
