added additional lines to work around youtube comment fetching API bug, added preliminary LDA topic modeling

--- a/src/extract_comments.ipynb
+++ b/src/extract_comments.ipynb
@@ -95,6 +95,13 @@
     "        response = request.execute()\n",
     "\n",
     "        comments += get_comments(response)\n",
+    "        \n",
+    "        # due to a potential bug in the YouTube API where the nextPageToken is the same every time...\n",
+    "        # a break condition to break out of the while loop had to be implemented...\n",
+    "        # otherwise it'll loop forever\n",
+    "        if 'nextPageToken' in response.keys():\n",
+    "            if nextPageToken == response['nextPageToken']:\n",
+    "                break\n",
     "    \n",
     "    # return the comments as a DataFrame\n",
     "    return pd.DataFrame(comments)"
@@ -129,7 +136,15 @@
     "                response = request.execute()\n",
     "\n",
     "                replies += get_comments(response)\n",
-    "    \n",
+    "                \n",
+    "                # due to a potential bug in the YouTube API where the nextPageToken is the same every time...\n",
+    "                # a break condition to break out of the while loop had to be implemented...\n",
+    "                # otherwise it'll loop forever\n",
+    "                if 'nextPageToken' in response.keys():\n",
+    "                    if nextPageToken == response['nextPageToken']:\n",
+    "                        break\n",
+    "                \n",
+    "    # return the replies as a DataFrame\n",
     "    return pd.DataFrame(replies)"
    ]
   },
@@ -143,7 +158,7 @@
    "outputs": [],
    "source": [
     "# insert the video ID from desired video to extract comments from (this would be the text that comes after 'https://www.youtube.com/watch?v=')\n",
-    "videoId = 'x3SZsSWqS3g'\n",
+    "videoId = 'N1E045hiKB8'\n",
     "\n",
     "# initiate the YouTube client\n",
     "youtube = build(serviceName='youtube', version='v3', developerKey=api_key)\n",
